# definitely-not-one-password

./: .env  Cargo.toml  README.md  database.db  diesel.toml
migrations/2024-11-19-022336_users/: up.sql
src/: models.rs  schema.rs
