[package]
name = "definitely-not-one-password"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.4", features = ["sqlite"] }
dotenv = "0.15.0"
dotenvy = "0.15.7"
log = "=0.4.22"
rocket = "0.5.1"
simple-log = "2.1.1"

[dependencies.rocket_sync_db_pools]
version = "0.1.0"
features = ["diesel_sqlite_pool"]
